# parser-bindings

./: build
benchmark/: benchmark.py  benchmark_big.py  benchmark_pi.py  log.txt  pyproject.toml
pylib/: .gitignore  pyproject.toml
pylib/src/pylib/: __init__.py
pylib/tests/: test_pyparser.py
pyparser/: pyproject.toml
pyparser/src/pyparser/: __init__.py
pyparser/tests/: test_pyparser.py
rslib/: .gitignore  Cargo.toml  pyproject.toml
rslib/src/: lib.rs
